# djinvue-skeleton

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  vite.config.js
accounts/: forms.py  middleware.py  views.py
apps/accounts/: admin.py  middleware.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templatetags/: inertia_extras.py
apps/demo/: models.py  views.py
apps/demo/migrations/: 0002_seed_notes.py
apps/todos/: models.py  urls.py  views.py
config/: settings.py  urls.py  utils.py
config/templates/: base.html  inertia.html
demo/: models.py  urls.py  views.py
demo/migrations/: 0001_initial.py
frontend/: entry.js
frontend/Components/: Navbar.vue
frontend/Layouts/: AppLayout.vue
frontend/Pages/Auth/: Login.vue  Register.vue
frontend/Pages/Demo/: Index.vue
frontend/Pages/Todos/: Edit.vue  Index.vue
frontend/src/: entry.js
frontend/src/components/shared/: Navbar.vue
frontend/src/css/: app.css
frontend/src/layouts/: AppLayout.vue
frontend/src/pages/accounts/: Login.vue  Register.vue
frontend/src/pages/demo/: Index.vue
frontend/src/pages/todos/: Edit.vue  Index.vue
templates/: base.html  inertia.html
todos/: forms.py  models.py  views.py
todos/migrations/: 0001_initial.py
