[project]
name = "djinvue-skeleton"
version = "0.1.0"
description = "Squelette Django + Inertia + Vue 3"
requires-python = ">=3.10"
dependencies = [
    "django~=5.2",
    "django-environ>=0.14.0",
    "django-vite>=3.1.0",
    "inertia-django>=1.2.0",
    "psycopg[binary]>=3.3.4",
]

# 99 caractères (plutôt que les 79 de PEP8) : évite de casser artificiellement
# les lignes contenant des chemins Python longs (ex. AUTH_PASSWORD_VALIDATORS).
[tool.ruff]
line-length = 99
